# snake-pp

./: .gitignore  CMakeLists.txt  README.md  config.c  config.h  food.c  food.h  game.h  input.h  main.cpp  menu.h  render.h  snake.h
include/: common.h  config.h  difficulty.h  files.h  food.h  game.h  input.h  map.h  menu.h  render.h  snake.h  sound.h
src/: common.c  config.c  difficulty.c  files.c  food.c  game.c  input.c  main.cpp  map.c  menu.c  render.c  snake.c  sound.c
